--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tocchio's Barber Shop</title>
-    <link rel="stylesheet" href="style/reset.css" link>
-	<link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css">
   </head>
 
   <body>
     <header>
-        <h1><img src="images/logo-white.png"></h1>
+     <h1><img src="images/logo-white.png"></h1>
     </header>
 
     <img class="image-banner" src="images/banner.jpg">
 
   </body>
-  
 </html>
