--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <div class="box">
-      <header>
-      <img class="logo" src="images/logo-white.png">
-      </header>
+    <div class="header">
+      <div class="logo-container">
+        <img src="images/logo-white.png">      
+      </div>
     </div>
     <img class="image-banner" src="images/banner.jpg">
 
