--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tocchio's Barber Shop</title>
-    <link rel="stylesheet" href="style/reset.css">
+    
     <link rel="stylesheet" href="style/style.css">
   </head>
 
   <body>
     <div class="header">
-      <div class="logo-container">
-        <img src="images/logo-white.png">      
+      <div class="inner-header">
+        <div class="logo-container">
+          <h1><img src="images/logo-white.png"></h1>
+        </div>
       </div>
     </div>
     <img class="image-banner" src="images/banner.jpg">
