--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Tocchio's Barber Shop</title>
-    
     <link rel="stylesheet" href="style/style.css">
   </head>
 
@@ -12,7 +12,7 @@
     <div class="header">
       <div class="inner-header">
         <div class="logo-container">
-          <h1><img src="images/logo-white.png"></h1>
+          <h1><img src="images/logo-white-200.png"></h1>
         </div>
       </div>
     </div>
