--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Tocchio's Barber Shop</title>
     <link rel="stylesheet" href="style/style.css">
   </head>
@@ -11,9 +12,16 @@
   <body>
     <div class="header">
       <div class="inner-header">
+
         <div class="logo-container">
           <h1><img src="images/logo-white-200.png"></h1>
         </div>
+
+        <ul class="navigation">
+          <a><li>Home</li></a>
+          <a><li>About</li></a>
+          <a><li>Contact</li></a>
+        </ul>
       </div>
     </div>
     <img class="image-banner" src="images/banner.jpg">
