--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         </ul>
       </div>
     </div>
+
     <img class="image-banner" src="images/banner.jpg">
+
+    <div class="sobre">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius esse sed dicta modi eligendi odit reiciendis, tempora sit repudiandae placeat accusantium mollitia rerum temporibus? Nobis similique cum exercitationem laudantium eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae perspiciatis culpa perferendis cum libero similique at quibusdam quam voluptatem expedita, fuga tenetur ipsum eligendi deleniti labore error, placeat, harum consectetur.</p>
+    </div>
 
   </body>
 </html>
