--- a/index.html
+++ b/index.html
@@ -10,42 +10,50 @@
   </head>
 
   <body>
-    <div class="header">
-      <div class="inner-header">
+      <div class="header">
+        <div class="inner-header">
 
-        <div class="logo-container">
-          <h1><img src="images/logo-white-200.png"></h1>
+          <div class="logo-container">
+            <h1><img src="images/logo-white-200.png"></h1>
+          </div>
+
+          <ul class="navigation">
+            <a><li>Home</li></a>
+            <a><li>About</li></a>
+            <a><li>Contact</li></a>
+          </ul>
         </div>
-
-        <ul class="navigation">
-          <a><li>Home</li></a>
-          <a><li>About</li></a>
-          <a><li>Contact</li></a>
-        </ul>
       </div>
-    </div>
 
     <img class="image-banner" src="images/banner.jpg">
-
-    <div class="main">
-      <h2>About</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius esse sed dicta modi eligendi odit reiciendis, tempora sit repudiandae placeat accusantium mollitia rerum temporibus? Nobis similique cum exercitationem laudantium eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae perspiciatis culpa perferendis cum libero similique at quibusdam quam voluptatem expedita, fuga tenetur ipsum eligendi deleniti labore error, placeat, harum consectetur.</p>
+    
+    <main>
+      <section class="about">
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius esse sed dicta modi eligendi odit reiciendis, tempora sit repudiandae placeat accusantium mollitia rerum temporibus? Nobis similique cum exercitationem laudantium eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae perspiciatis culpa perferendis cum libero similique at quibusdam quam voluptatem expedita, fuga tenetur ipsum eligendi deleniti labore error, placeat, harum consectetur.</p>
+      </section>
 
       <div class="video" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/86498288?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-      <h2>Where we are</h2>
-      <p>Located at the hart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
+      <section class="location">
+        <h2>Where we are</h2>
+        <p>Located at the hart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
+      </section>
   
-      <div class="map">
+      <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.5917052800787!2d11.573259815766557!3d48.1373967591523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e248d37632d%3A0xdead51b35f0e0bb3!2sMarienplatz!5e0!3m2!1spt-BR!2sde!4v1626616620009!5m2!1spt-BR!2sde" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
+      </section>
 
-    </div>    
+    </main>    
+
+    <footer>
+      <div class="container-footer">
+        <img class="logo-footer" src="images/logo-black.png" alt="logo barber shop">
+      </div>
+    </footer> 
 
   </body>
 
-  <footer>
-    
-  </footer> 
+
 
 </html>
