--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <ul class="navigation">
             <a><li>Home</li></a>
             <a><li>About</li></a>
+            <a><li>Services</li></a>
+            <a><li>Location</li></a>
             <a><li>Contact</li></a>
           </ul>
         </div>
@@ -35,13 +37,37 @@
 
       <div class="video" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/86498288?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
+      <section class="services">
+        <h2>Services</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, veritatis! Amet, deserunt! Id obcaecati delectus perspiciatis, tempore commodi architecto maiores illo nostrum excepturi provident explicabo, assumenda, incidunt voluptatum eaque officia!</p>
+      </section>
+
+      <section class="hair-container">
+        <img class="haircut-photo" src="images/hair-cut.jpg" alt="hair cut photo">
+        <div class="text-hair">
+          <p>Haircut - € 17,00</p>
+        </div>
+      </section>
+      <section class="beard-container"> 
+        <img class="beardtrim-photo" src="images/beard-trim.jpg" alt="beard trim photo">
+        <div class="text-beard">
+          <p>Beard trim - € 17,00</p>
+        </div>
+      </section>
+      <section class="full-container">    
+        <img class="fullpack-photo" src="images/fullpack.jpg" alt="hair style photo">
+        <div class="text-full">
+          <p>Hair + Beard - € 30,00</p>
+        </div>
+      </section>
+
       <section class="location">
         <h2>Where we are</h2>
         <p>Located at the hart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
       </section>
   
       <section class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.5917052800787!2d11.573259815766557!3d48.1373967591523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e248d37632d%3A0xdead51b35f0e0bb3!2sMarienplatz!5e0!3m2!1spt-BR!2sde!4v1626616620009!5m2!1spt-BR!2sde" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.5917052800787!2d11.573259815766557!3d48.1373967591523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e248d37632d%3A0xdead51b35f0e0bb3!2sMarienplatz!5e0!3m2!1spt-BR!2sde!4v1626616620009!5m2!1spt-BR!2sde" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </section>
 
     </main>    
