--- a/index.html
+++ b/index.html
@@ -63,18 +63,44 @@
 
       <section class="location">
         <h2>Where we are</h2>
-        <p>Located at the hart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
+        <p>Located at the heart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
       </section>
   
       <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.5917052800787!2d11.573259815766557!3d48.1373967591523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e248d37632d%3A0xdead51b35f0e0bb3!2sMarienplatz!5e0!3m2!1spt-BR!2sde!4v1626616620009!5m2!1spt-BR!2sde" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </section>
 
+      <section class="contact">
+        <h2>Contact</h2>
+        <p>If you have any questions, comments, or suggestions please feel free to reach us out by the formular.</p>
+        <br>
+        <p><strong>Opening hours:</strong></p>
+        <p>Tuesday to Saturday 10:00 - 20:00</p>
+        <p>Sunday 10:00 - 18:00</p>
+      </section>
+
+      <section class="main-contact">
+        <form>
+          <img class="barber-pole" src="images/barber-pole.png" alt="barber pole">
+          <label for="namesurname">Name and Surname</label>
+          <input type="text" id="namesurname" class="standard-input" required placeholder="name and surname ">
+          <label for="email">Email</label>
+          <input type="email" id="email" class="standard-input" required placeholder="email@domain.com">
+          <label for="telephone">Telephone</label>
+          <input type="tel" id="telephone" class="standard-input" required placeholder="xxx xxxxxxxx">
+          <label for="message">Message</label>
+          <textarea cols="50" rows="10" id="message" class="standard-input"></textarea>
+          <input type="submit" value="Send" class="send">
+        </form>
+      </section>
+
+    
+
     </main>    
 
     <footer>
       <div class="container-footer">
-        <img class="logo-footer" src="images/logo-black.png" alt="logo barber shop">
+        <img class="logo-footer" src="images/logo-white-200.png" alt="logo barber shop">
       </div>
     </footer> 
 
