--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-      <div class="header">
+      <a id="top"><div class="header"></a>
         <div class="inner-header">
 
           <div class="logo-container">
@@ -18,11 +18,10 @@
           </div>
 
           <ul class="navigation">
-            <a><li>Home</li></a>
-            <a><li>About</li></a>
-            <a><li>Services</li></a>
-            <a><li>Location</li></a>
-            <a><li>Contact</li></a>
+            <a href="#about"><li>About</li></a>
+            <a href="#services"><li>Services</li></a>
+            <a href="#location"><li>Location</li></a>
+            <a href="#contact"><li>Contact</li></a>
           </ul>
         </div>
       </div>
@@ -30,14 +29,14 @@
     <img class="image-banner" src="images/banner.jpg">
     
     <main>
-      <section class="about">
+      <a id="about"></a><section class="about"></a>
         <h2>About</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius esse sed dicta modi eligendi odit reiciendis, tempora sit repudiandae placeat accusantium mollitia rerum temporibus? Nobis similique cum exercitationem laudantium eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae perspiciatis culpa perferendis cum libero similique at quibusdam quam voluptatem expedita, fuga tenetur ipsum eligendi deleniti labore error, placeat, harum consectetur.</p>
       </section>
 
       <div class="video" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/86498288?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-      <section class="services">
+      <a id="services"><section class="services"></a>
         <h2>Services</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, veritatis! Amet, deserunt! Id obcaecati delectus perspiciatis, tempore commodi architecto maiores illo nostrum excepturi provident explicabo, assumenda, incidunt voluptatum eaque officia!</p>
       </section>
@@ -61,7 +60,7 @@
         </div>
       </section>
 
-      <section class="location">
+      <a id="location"><section class="location"></a>
         <h2>Where we are</h2>
         <p>Located at the heart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
       </section>
@@ -70,10 +69,10 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.5917052800787!2d11.573259815766557!3d48.1373967591523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e248d37632d%3A0xdead51b35f0e0bb3!2sMarienplatz!5e0!3m2!1spt-BR!2sde!4v1626616620009!5m2!1spt-BR!2sde" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </section>
 
-      <section class="contact">
+      <a id="contact"></a><section class="contact"></a>
         <h2>Contact</h2>
         <p>If you have any questions, comments, or suggestions please feel free to reach us out by the formular.</p>
-        <br>
+        <br><br>
         <p><strong>Opening hours:</strong></p>
         <p>Tuesday to Saturday 10:00 - 20:00</p>
         <p>Sunday 10:00 - 18:00</p>
@@ -93,19 +92,13 @@
           <input type="submit" value="Send" class="send">
         </form>
       </section>
-
-    
-
     </main>    
 
     <footer>
       <div class="container-footer">
-        <img class="logo-footer" src="images/logo-white-200.png" alt="logo barber shop">
+        <a href="#top"><img class="logo-footer" src="images/logo-white-200.png" alt="logo barber shop"></a>
       </div>
     </footer> 
 
   </body>
-
-
-
 </html>
