--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
     <main>
       <a id="about"></a><section class="about"></a>
         <h2>About</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius esse sed dicta modi eligendi odit reiciendis, tempora sit repudiandae placeat accusantium mollitia rerum temporibus? Nobis similique cum exercitationem laudantium eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae perspiciatis culpa perferendis cum libero similique at quibusdam quam voluptatem expedita, fuga tenetur ipsum eligendi deleniti labore error, placeat, harum consectetur.</p>
+        <p>Inspired by old New York barbershops from the 40s, 50s, and 60s, Tocchio's Barbershop focuses on bringing back the male culture lost over the years, in which men met to shave with a razor and cut their hair while they drink, talk and chill.</p>
+        <br>
+        <p>Between warm towels and facial massage, the best creams and foams prepare our clients' faces. Also, our visitors can enjoy the space in our brewery.</p>
       </section>
 
       <div class="video" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/86498288?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
       <a id="services"><section class="services"></a>
         <h2>Services</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, veritatis! Amet, deserunt! Id obcaecati delectus perspiciatis, tempore commodi architecto maiores illo nostrum excepturi provident explicabo, assumenda, incidunt voluptatum eaque officia!</p>
+        <p>Services that go beyond beard, hair and mustache. Our services usually exceed expectations, with trained and updated professionals, highly capable of performing their tasks with excellence.</p>
       </section>
 
       <section class="hair-container">
@@ -62,7 +64,7 @@
 
       <a id="location"><section class="location"></a>
         <h2>Where we are</h2>
-        <p>Located at the heart of Munich, Tocchio's Barber Shop is the perfect place to give yoursel a break, an to enjoy all the best that the city can offer.</p>
+        <p>Located at the heart of Munich, Tocchio's Barber Shop is the perfect place to give yourself a break, and to enjoy all the best that the city can offer.</p>
       </section>
   
       <section class="map">
