--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
   <body>
       <a id="top"><div class="header"></a>
         <div class="inner-header">
-
           <div class="logo-container">
-            <h1><img src="images/logo-white-200.png"></h1>
+            <img class="logo" src="images/logo-white-200.png">
           </div>
-
           <ul class="navigation">
-            <a href="#about"><li>About</li></a>
-            <a href="#services"><li>Services</li></a>
-            <a href="#location"><li>Location</li></a>
-            <a href="#contact"><li>Contact</li></a>
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#services">Services</a>
+            </li>
+            <li>
+              <a href="#location">Location</a>
+            </li>
+            <li>
+              <a href="#contact">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
