--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <p>Sunday 10:00 - 18:00</p>
         </section>
 
-        <div class="container">
+        <div class="contact-container">
 
           <section class="form-container">
 
@@ -112,8 +112,8 @@
       </div>
     </main>    
 
-    <footer>
-      <div class="container-footer">
+    <footer class="main-footer">
+      <div class="footer-container">
         <a href="#top"><img class="logo-footer" src="images/logo-white-200.png" alt="logo barber shop"></a>
       </div>
     </footer> 
