--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <a id="top"><div class="header"></a>
+    <header class="header" id="top">
       <div class="header-container">
         <div class="logo-container">
           <a href="index.html" target="_self"><img class="logo" src="images/logo-white-200.png"></a>
@@ -25,7 +25,7 @@
             <a class="heander-nav-link" href="#contact">Contact</a>
         </nav>
       </div>
-    </div>
+    </header>
     
     <main>
 
@@ -33,7 +33,7 @@
 
       <div class="container">
 
-        <a id="about"></a><section class="information"></a>
+        <section class="information" id="about">
           <h2>About</h2>
           <p>Inspired by old New York barbershops from the 40s, 50s, and 60s, Tocchio's Barbershop focuses on bringing back the male culture lost over the years, in which men met to shave with a razor and cut their hair while they drink, talk and chill.</p>
           <br>
@@ -42,7 +42,7 @@
 
         <div class="video" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/86498288?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-        <a id="services"><section class="information"></a>
+        <section class="information" id="services">
           <h2>Services</h2>
           <p>Services that go beyond beard, hair and mustache. Our services usually exceed expectations, with trained and updated professionals, highly capable of performing their tasks with excellence.</p>
         </section>
@@ -68,7 +68,7 @@
           </section>
         </div>
 
-        <a id="location"><section class="information"></a>
+        <section class="information" id="location">
           <h2>Where we are</h2>
           <p>Located at the heart of Munich, Tocchio's Barber Shop is the perfect place to give yourself a break, and to enjoy all the best that the city can offer.</p>
         </section>
@@ -77,7 +77,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2662.5917052800787!2d11.573259815766557!3d48.1373967591523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e248d37632d%3A0xdead51b35f0e0bb3!2sMarienplatz!5e0!3m2!1spt-BR!2sde!4v1626616620009!5m2!1spt-BR!2sde" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
 
-        <a id="contact"></a><section class="contact"></a>
+        </a><section class="contact" id="contact">
           <h2>Contact</h2>
           <p>If you have any questions, comments, or suggestions please feel free to reach us out by the formular.</p>
           <br><br>
@@ -114,7 +114,7 @@
 
     <footer class="main-footer">
       <div class="footer-container">
-        <a href="#top"><img class="logo-footer" src="images/logo-white-200.png" alt="logo barber shop"></a>
+        <a href="#top"><img class="logo-footer" src="images/logo-white-200.png" alt="logo barber shop" href="#top"></a>
       </div>
     </footer> 
 
