--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
           <a href="index.html" target="_self"><img class="logo" src="images/logo-white-200.png"></a>
         </div>
 
-        <nav class="header-nav">
-            <a class="heander-nav-link" href="#about">About</a>
-            <a class="heander-nav-link" href="#services">Services</a>
-            <a class="heander-nav-link" href="#location">Location</a>
-            <a class="heander-nav-link" href="#contact">Contact</a>
+        <nav>
+          <ul class="header-nav">
+              <li class="heander-nav-link"><a href="#about">About</a></li>
+              <li class="heander-nav-link"><a href="#services">Services</a></li>
+              <li class="heander-nav-link"><a href="#location">Location</a></li>
+              <li class="heander-nav-link"><a href="#contact">Contact</a></li>
+          </ul>
         </nav>
       </div>
     </header>
